--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -23,6 +23,9 @@
 .u-margin-top-big {
   margin-top: 8rem !important;
 }
+.u-margin-right-medium {
+  margin-right: 3rem;
+}
 
 .u-margin-top-huge {
   margin-top: 10rem !important;
