--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $color-primary: #2CACF3;
 $color-grey-light: #7d7d7d;
 $color-grey-light-2: #707070;
+$color-grey-light-3: #D0D0D0;
 $color-grey: #343434;
 $color-grey-dark: #212121;
 $color-white: #fff;
