--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 //different components
 @import "components/button";
 @import "components/hero-section";
+@import "components/login-section";
 @import "components/carousel";
 //Layout components
 @import "layout/header";
