fixed some styles for buttons

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -44,7 +44,9 @@
   }
   &--blue {
     background-color: $color-primary;
-    color: $color-white;
+    a {
+      color: $color-white;
+    }
     &::after {
       background-color: $color-primary;
     }
