--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,6 +10,9 @@
       li {
         margin-bottom: 2rem;
       }
+      .nav-link {
+        white-space: nowrap;
+      }
     }
   }
   .lower-footer {
@@ -28,7 +31,7 @@
     .language-selection {
       display: flex;
       .nav-link {
-        &:hover{
+        &:hover {
           font-weight: $font-weight-bold;
         }
       }
