--- a/scss/layout/_section-app.scss
+++ b/scss/layout/_section-app.scss
@@ -1,6 +1,20 @@
 .section-app {
-  padding: 11rem;
+  padding: 14rem 11rem;
+  position: relative;
+  .smartphone {
+    background-image: url('/images/iphone.png');
+    background-position: center ;
+    background-size: contain;
+    left: 7rem;
+    top: 6.5rem;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 30rem;
+    height: 54rem;
+  }
   .text-content {
+    max-width: 50%;
+    margin: 0 auto;
     p {
       max-width: 50rem;
       font-size: 2.2rem;
