--- a/scss/layout/_section-how.scss
+++ b/scss/layout/_section-how.scss
@@ -11,15 +11,15 @@
     .title {
       font-weight: $font-weight-bold;
       font-size: 2.5rem;
+      margin-top: 3.5rem;
     }
     .subtitle {
       font-size: 1.8rem;
       color: $color-grey-light-2;
     }
-    svg {
-      width: 7.5rem;
-      height: 7.5rem;
-      color: $color-primary;
+    .icon {
+      vertical-align: top;
+      height: 85px;
     }
   }
 }
