--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/button";
 @import "components/hero-section";
 @import "components/login-section";
+@import "components/sign-up-customer-section";
 @import "components/carousel";
 //Layout components
 @import "layout/header";
