--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,3 +20,4 @@
 @import "layout/section-services";
 @import "layout/section-how";
 @import "layout/section-app";
+@import "layout/section-settings";
