View account ( not registered version, registered, no reviews page)

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // COLORS
 $color-primary: #2CACF3;
+$color-green: #7ED321;
 $color-grey-light: #7d7d7d;
 $color-grey-light-2: #707070;
 $color-grey-light-3: #D0D0D0;
