--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,9 +15,9 @@ html {
   @include respond(tab-port) {
     font-size: 50%;
   }
-  @include respond(big-desktop) {
-    font-size: 75%;
-  }
+  //@include respond(big-desktop) {
+  //  font-size: 75%;
+  //}
 }
 
 ul {
