--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,3 +22,5 @@
 @import "layout/section-services";
 @import "layout/section-how";
 @import "layout/section-app";
+@import "layout/view-account-as-guest";
+@import "layout/view-account-registered";
