styled and made some adjustments

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,8 @@
 @import "layout/sign-up-customer-section";
 @import "layout/post-request-section";
 @import "components/carousel";
+@import "components/badges";
+@import "components/map";
 //Layout components
 @import "layout/header";
 @import "layout/footer";
@@ -26,3 +28,5 @@
 @import "layout/view-account-registered";
 
 @import "layout/section-settings";
+@import "layout/section-became-pro";
+@import "layout/section-book-service";
