--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,6 +10,9 @@
     align-content: center;
     padding: 0;
     height: 100%;
+    .form-group {
+      margin-bottom: 0;
+    }
     .menu {
       display: flex;
       align-items: center;
