--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-green: #7ED321;
 $color-grey-light: #7d7d7d;
 $color-grey-light-2: #707070;
 $color-grey-light-3: #D0D0D0;
+$color-grey-light-4: #C3C3C3;
 $color-grey: #343434;
 $color-grey-dark: #212121;
 $color-white: #fff;
