--- a/scss/layout/_section-my-request-rate.scss
+++ b/scss/layout/_section-my-request-rate.scss
@@ -14,13 +14,27 @@
   .settings-tab {
     display: flex;
     min-height: 50rem;
+    @media (max-width: 768px){
+      flex-direction: column;
+    }
+    .row{
+      width: 100%;
+    }
     .nav {
       border-right: 1px solid #ECECEC;
+      @media (max-width: 768px) {
+        border: 0;
+      }
     }
     .nav-pills {
       padding-top: 10rem;
-      padding-left: 2rem;
+      padding-left: 4rem;
       padding-right: 2rem;
+      @media (max-width: 768px) {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+      }
       .tips {
         display: none;
         font-size: 13px;
@@ -43,7 +57,9 @@
     .tab-content {
       padding-left: 6.4rem;
       padding-top: 10rem;
-      //padding-bottom: 10rem;
+      @media (max-width: 768px) {
+        padding: 5rem;
+      }
       .service-type{
         background: #FFFFFF;
         border: 1px solid #DDDDDD;
@@ -53,6 +69,67 @@
         position: relative;
         min-height: 80rem;
         &__rate{
+          min-height: 40rem !important;
+          transition:
+                  top .5s 0s cubic-bezier(.1, 1.2, .3, 1),
+                  transform .5s 0s cubic-bezier(.1, 1.2, .3, 1),
+                  width .5s .5s cubic-bezier(.1, 1.2, .3, 1),
+                  opacity .3s;
+          .professional-group{
+            @media (max-width: 768px) {
+              flex-direction: column;
+            }
+          }
+          &.minimized{
+            top: 100%;
+            left: 80%;
+            transform: translate(-50%, -30px);
+            width: 200px;
+            opacity: .5;
+            position: absolute;
+            z-index: 1;
+            height: 3rem !important;
+            min-height: 2rem !important;
+            overflow: hidden;
+            @media(max-width: 1200px){
+              top: calc(100% + 3px);
+            }
+            @media(max-width: 900px){
+              top: calc(100% + 5px);
+              left: 70%;
+            }
+            .service-type__minimize-title{
+              display: block !important;
+            }
+            .service-type__content{
+              display: none;
+            }
+            .minimize{
+              display: none;
+            }
+          }
+          .maximize{
+            top: 0;
+            opacity: 1;
+            transition:
+                    opacity .3s .5s,
+                    top 0s .5s;
+          }
+          &.closed{
+            display: none;
+          }
+          &__header{
+            padding: 4rem 5rem;
+            border-bottom: 1px solid #E6E6E6;
+            display: flex;
+            justify-content: space-between;
+            @media (max-width: 768px) {
+              flex-direction: column;
+              justify-content:center;
+              align-items:center;
+              text-align: center;
+            }
+          }
           .service-type__content{
             .leave-rating{
               display: flex;
@@ -196,7 +273,7 @@
             .prof-connect-info{
               .prof-message{
                 font-family: SFProTextLight;
-                font-size: 1.8rem;
+                font-size: 1.6rem;
                 letter-spacing: 0.012rem;
                 margin-bottom: 1rem;
               }
