--- a/scss/layout/_section-my-request.scss
+++ b/scss/layout/_section-my-request.scss
@@ -14,12 +14,29 @@
   .settings-tab {
     display: flex;
     min-height: 50rem;
+    position: relative;
+    .row{
+      width: 100%;
+      @media(max-width: 768px){
+        margin: 0;
+      }
+    }
     .nav {
       border-right: 1px solid #ECECEC;
+      @media (max-width: 768px) {
+        border: 0;
+      }
     }
     .nav-pills {
       padding-top: 10rem;
+      padding-left: 4rem;
       padding-right: 7rem;
+      @media (max-width: 768px) {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        padding: 5rem;
+      }
       .tips {
         display: none;
         font-size: 13px;
@@ -42,7 +59,31 @@
     .tab-content {
       padding-left: 6.4rem;
       padding-top: 10rem;
+      position: static !important;
       //padding-bottom: 10rem;
+      .active{
+        &.empty{
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          text-align:center;
+          p{
+            color: #DADADA;
+          }
+          a{
+            color: $color-primary;
+            cursor: pointer;
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+      @media (max-width: 768px) {
+        padding: 5rem;
+      }
       .service-type{
         background: #FFFFFF;
         border: 1px solid #DDDDDD;
@@ -50,16 +91,74 @@
         border-top-right-radius: 1.6rem;
         border-top-left-radius: 1.6rem;
         position: relative;
-        min-height: 80rem;
+        &__initial{
+          min-height: 40rem !important;
+          transition:
+                  top .5s 0s cubic-bezier(.1, 1.2, .3, 1),
+                  transform .5s 0s cubic-bezier(.1, 1.2, .3, 1),
+                  width .5s .5s cubic-bezier(.1, 1.2, .3, 1),
+                  opacity .3s;
+          &.minimized{
+            top: 100%;
+            left: 80%;
+            transform: translate(-50%, -30px);
+            width: 200px;
+            opacity: .5;
+            position: absolute;
+            z-index: 1;
+            height: 3rem !important;
+            min-height: 2rem !important;
+            overflow: hidden;
+            @media(max-width: 1200px){
+              top: calc(100% + 3px);
+            }
+            @media(max-width: 900px){
+              top: calc(100% + 5px);
+              left: 70%;
+            }
+            .service-type__minimize-title{
+              display: block !important;
+              cursor: pointer;
+            }
+            .service-type__content{
+              display: none;
+            }
+            .service-type__header{
+              display: none;
+            }
+            .minimize{
+              display: none;
+            }
+          }
+          .maximize{
+            top: 0;
+            opacity: 1;
+            transition:
+                    opacity .3s .5s,
+                    top 0s .5s;
+          }
+          &.closed{
+            display: none;
+          }
+        }
         &__header{
           padding: 4rem 5rem;
           border-bottom: 1px solid #E6E6E6;
           display: flex;
           justify-content: space-between;
+          @media (max-width: 768px) {
+            flex-direction: column;
+            justify-content:center;
+            align-items:center;
+            text-align: center;
+          }
         }
         &__settings{
           font-size: 1.8rem;
           letter-spacing: 0.011rem;
+          @media (max-width: 768px) {
+            margin-bottom: 1rem;
+          }
           .settings-label{
             font-family: SFProTextSemiBold;
             margin-bottom: 0.5rem;
@@ -71,15 +170,27 @@
             font-size: 1.8rem;
             letter-spacing: 0.011rem;
             font-family: SFProTextSemiBold;
+            @media(max-width: 767px){
+              text-align: center;
+            }
           }
           .professional-group{
             margin-top: 5rem;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            @media(max-width: 767px){
+              flex-direction: column;
+              margin-left: 0;
+              margin-right: 0;
+            }
             .prof-card{
               justify-content: center;
               align-items: center;
+              @media(max-width: 767px){
+                display: flex;
+                margin-bottom: 2rem;
+              }
               .prof-img{
                 height: 7.5rem;
                 width: 7.5rem;
@@ -92,6 +203,9 @@
               }
               .prof-main-info{
                 margin-top: 0.5rem;
+                @media(max-width: 767px){
+                  margin-left: 1.5rem;
+                }
                 .prof-name{
                   font-family: SFProTextLight;
                   font-size: 1.5rem;
@@ -109,9 +223,12 @@
               }
             }
             .prof-connect-info{
+              @media(max-width: 767px){
+                text-align: center;
+              }
               .prof-message{
                 font-family: SFProTextLight;
-                font-size: 1.8rem;
+                font-size: 1.6rem;
                 letter-spacing: 0.012rem;
                 margin-bottom: 1rem;
               }
@@ -119,6 +236,11 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                @media(max-width: 767px){
+                  display: flex;
+                  justify-content: center;
+                  flex-direction: column;
+                }
                 .price-tag{
                   display: flex;
                   flex-direction: column;
@@ -143,6 +265,10 @@
           position: absolute;
           right: 1rem;
           top: 0.5rem;
+          .service-type__minimize-title{
+            display: none;
+            padding: 0 2rem;
+          }
           .action{
             padding: 0 1rem;
           }
