--- a/scss/layout/_sign-up-customer-section.scss
+++ b/scss/layout/_sign-up-customer-section.scss
@@ -4,8 +4,18 @@
   &__content-inner {
     .sign-up-info{
       color: $color-white;
+      @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
       .sign-up__logo{
-        margin: 9rem 0;
+        margin: 20rem 0 10rem 0;
+        @media (max-width: 768px) {
+          margin: 5rem 0;
+        }
       }
       .sign-up__text-content{
         .text-content{
@@ -33,6 +43,16 @@
         padding: 1.5rem 0;
         a{
           margin-right: 2rem;
+          svg{
+            max-width: 240px;
+            height: 70px;
+            @include media-breakpoint-up(sm) {
+              max-width: 200px;
+            }
+            @media (max-width: 600px) {
+              max-width: 150px;
+            }
+          }
         }
       }
     }
@@ -40,31 +60,32 @@
       background: $color-white;
       border-radius: 14px;
       padding: 6rem 4rem;
-      &__title{
-        font-family: SFProTextHeavy;
-        font-size: 4rem;
-        letter-spacing: 0.025rem;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-      &__subtitle{
-        font-family: SFProTextLight;
-        font-size: 2.5rem;
-        letter-spacing: 0.016rem;
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-      &__text-content{
-        font-family: SFProText;
-        font-size: 1.5rem;
-        letter-spacing: 0.002rem;
-        text-align: center;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 1.2rem;
-      }
+      margin: 0 2rem;
       .sign-up-form{
+        .sign-up-main__title{
+          font-family: SFProTextHeavy;
+          font-size: 4rem;
+          letter-spacing: 0.025rem;
+          margin-bottom: 1rem;
+          text-align: center;
+        }
+        .sign-up-main__subtitle{
+          font-family: SFProTextLight;
+          font-size: 2.5rem;
+          letter-spacing: 0.016rem;
+          text-align: center;
+          margin-bottom: 2rem;
+        }
+        .sign-up-main__text-content{
+          font-family: SFProText;
+          font-size: 1.5rem;
+          letter-spacing: 0.002rem;
+          text-align: center;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          margin-bottom: 1.2rem;
+        }
         .form-group{
           margin-bottom: 1.3rem;
           font-family: SFProTextLight;
