--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,6 +7,9 @@
       display: flex;
       flex-wrap: wrap;
       width: 50%;
+      @include respond(tab-port) {
+        width: 100%;
+      }
       li {
         margin-bottom: 2rem;
       }
