--- a/scss/layout/_section-book-service.scss
+++ b/scss/layout/_section-book-service.scss
@@ -1,7 +1,7 @@
 .section-book-services {
   padding: 6rem;
   .page-title {
-    font-family: OpenSans,sans-serif;
+    font-family: OpenSans, sans-serif;
     font-weight: $font-weight-semibold;
     text-transform: initial;
     margin-bottom: 1.8rem;
@@ -13,7 +13,68 @@
     color: #3C3C3C;
     letter-spacing: 0.11px;
   }
+  .professionals {
+    position: relative;
+    h4 {
+      font-family: SFProTextLight, sans-serif;
+      font-size: 16px;
+      color: $color-black;
+      letter-spacing: 0.1px;
+      text-transform: uppercase;
+      position: absolute;
+      top: -6.1rem;
+    }
+  }
+  .professionals-pagination {
+    justify-content: flex-end;
+    li  {
+      &.active {
+        a {
+          color: $color-white;
+          background-color: $color-primary;
+        }
+      }
+      a {
+        color: $color-black;
+        font-size: 16px;
+        padding: 5px 12px;
+        letter-spacing: -0.49px;
+        border: none;
+      }
+    }
+  }
+  .specialist {
+    margin-bottom: 8.5rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    &__name {
+      margin-top: 1.8rem;
+      margin-bottom: 0;
+      line-height: 1.8rem;
+      font-size: 1.8rem;
+    }
+    &__image {
+      background-size: contain;
+      border-radius: 100%;
+      background-position: center;
+      width: 92px;
+      height:92px;
+    }
+  }
   #map {
     margin-bottom: 5.5rem;
+  }
+  .heading-all-services {
+    font-family: SFProTextSemibold, sans-serif;
+    font-size: 35px;
+    color: $color-black;
+    letter-spacing: 0.22px;
+    text-align: center;
+    margin-bottom: 3.7rem;
+  }
+  &__header-block {
+    position: relative;
   }
 }
