--- a/scss/layout/_section-how.scss
+++ b/scss/layout/_section-how.scss
@@ -8,6 +8,9 @@
   }
   .text-content {
     text-align: center;
+    @include respond(phone) {
+      margin-bottom:3rem;
+    }
     .title {
       font-weight: $font-weight-bold;
       font-size: 2.5rem;
