fixed some styles

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -115,6 +115,7 @@
       border: none;
       cursor: pointer;
       margin-left: 2.5rem;
+      height: 3rem;
       option {
         border: none;
       }
