--- a/scss/layout/_section-settings.scss
+++ b/scss/layout/_section-settings.scss
@@ -23,7 +23,7 @@
       .nav-link {
         font-family: SFProTextSemiBold;
         font-size: 1.8rem;
-        color: $color-black;
+        color: #000;
         &.active {
           font-family: SFProTextBold;
           background: transparent;
