Replaced header (responsive) + changes in request page

--- a/scss/layout/test.scss
+++ b/scss/layout/test.scss
@@ -1,4 +1,4 @@
-.request-test {
+.request-settings {
   min-height: 50rem;
   .heading-settings {
     font-family: SFProTextBold, sans-serif;
@@ -282,5 +282,12 @@
         display: block;
       }
     }
+  }
+}
+
+
+.chat-tab{
+  .wrap{
+    display: flex !important;
   }
 }
