--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,3 +34,4 @@
 @import "layout/section-settings";
 @import "layout/section-became-pro";
 @import "layout/section-book-service";
+@import "layout/test";
