--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -25,7 +25,7 @@
         margin-right: 5rem;
         cursor: pointer;
         & > a {
-          padding: 2rem 0;
+          //padding: 2rem 0;
         }
         &:hover {
           ul {
