--- a/scss/layout/_section-my-request.scss
+++ b/scss/layout/_section-my-request.scss
@@ -1,5 +1,5 @@
 .request-settings {
-  min-height: 100vh;
+  min-height: 65vh;
   .heading-settings {
     font-family: SFProTextBold, sans-serif;
     font-size: 3rem;
@@ -13,7 +13,7 @@
   }
   .settings-tab {
     display: flex;
-    min-height: 50rem;
+    min-height: 65vh;
     position: relative;
     .row {
       width: 100%;
@@ -292,5 +292,11 @@
         display: block;
       }
     }
+  }
+}
+
+.minimize,.close {
+  &.action {
+    cursor: pointer;
   }
 }
