--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -25,7 +25,9 @@
         margin-right: 5rem;
         cursor: pointer;
         & > a {
-          //padding: 2rem 0;
+          &.current-page {
+            color: $color-primary;
+          }
         }
         &:hover {
           ul {
@@ -66,6 +68,41 @@
       align-items: center;
       @include respond(tab-port) {
         display: none;
+      }
+      .user-name {
+        @include transition();
+        margin-left: 3rem;
+        a {
+          font-size: 1.8rem;
+        }
+      }
+      .logged-in {
+        display: flex;
+        a {
+          margin-right: 5rem;
+          color: black;
+          position: relative;
+          &:hover {
+            &:after {
+              opacity: 1;
+              width: 100%;
+            }
+          }
+          &:after {
+            @include transition();
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 1px;
+            width: 2px;
+            background-color: $color-primary;
+            opacity: 0;
+          }
+          &.current-page {
+            color: $color-primary;
+          }
+        }
       }
     }
     .dropdown {
